--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-fuck off 
-<style>
-* {
+bob is working on something to put here
+
+<style>* {
   color:white;
 }
 * {
+  font-family:Arial
 background-color:black;
 }
   
