--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-bob is working on something to put here
+<br><br><br><br><CENTER><P>bob is working on something to put here</P></CENTER>
 
 <style>* {
   color:white;
