--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
-<br><br><br><br><CENTER><P>bob is working on something to put here</P></CENTER>
+<br><br><br><br><br<br><br><br><CENTER><P>bob is working on something to put here</P></CENTER>
 
-<style>* {
+<style>
+
+* {
   color:white;
 }
-* {
-  font-family:Arial
+body {
+  font-family:Arial;
 background-color:black;
 }
   
